# machina-discens

./: MANIFEST.in  README.md  pyproject.toml
src/machina_discens/: cli.py  config.py  functions.py  machina.yaml
src/machina_discens/providers/: camelids.py  depsek.py  openai.py  strangelove.py
src/name_of_the_machina/: main.py  utilities.py
src/name_of_the_machina/providers/: metai.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
