[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "machina-discens"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Machina Discens (Lat.) — Learning Machine (the machine that is learning as we speak)."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["machina-discens"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
machina-discens = "machina_discens.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-discens/machina-discens"

[dependency-groups]
dev = ["pytest>=8.0.0"]